# linux-dev

03_TerminalProject/: show.c
04_Multifile/: Makefile  fun.c  outlib.h  prog.c
05_Environmental/: CMakeLists.txt  regex.c  regex.h  window.c
06_Debugging/: reverse.c
07_DebuggingTracing/: Makefile  fake_unlink.c  remove.c
08_TestingCoverage/: Makefile
08_TestingCoverage/test/: test.ts
09_I18nL10n/: Makefile.am  configure.ac  guess.c  ru.po
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  guess.c  guess.md  guess.pot  ru.po
11_Toolkits/: Makefile  counter.c
12_ScriptingText/: Makefile.am  buf.c  buf.h  configure.ac  main.c
13_PatchInstall/: Makefile.am  configure.ac  guess.c  guess.pot
